Fix printed page not showing in IE/Firefox

--- a/src/css/print.css
+++ b/src/css/print.css
@@ -56,13 +56,9 @@ main {
     top: 0;
 }
 
-body main section {
-    display: none;
-}
-
 /* uncss:ignore */
-body main section[data-print-subject] {
-    display: block;
+main section[data-print-subject] {
+    height: auto !important;
 }
 
 .warningMessagePopup {
